sonar hint attention